# devops_assignment

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  otel-local-config.yaml  pyproject.toml  test_api.py
.github/workflows/: deploy.yml
infrastructure/: backend.tf  main.tf  outputs.tf  providers.tf  terraform-development.tfvars  terraform-production.tfvars  variables.tf
infrastructure/modules/alb/: main.tf  outputs.tf  variables.tf
infrastructure/modules/ecr/: main.tf  outputs.tf  variables.tf
infrastructure/modules/ecs/: main.tf  outputs.tf  variables.tf
infrastructure/modules/github_oidc/: main.tf  outputs.tf  variables.tf
infrastructure/modules/iam/: main.tf  outputs.tf  variables.tf
infrastructure/modules/networking/: main.tf  outputs.tf  variables.tf
infrastructure/modules/rds/: main.tf  outputs.tf  variables.tf
infrastructure/modules/waf/: main.tf  outputs.tf  variables.tf
src/: main.py
src/core/: config.py  db.py  dependencies.py  init_db.py
src/modules/hero/: api.py  models.py  repository.py  schemas.py  service.py
